--- a/rename_file/update_img_label.ui
+++ b/rename_file/update_img_label.ui
@@ -148,6 +148,11 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+     </font>
+    </property>
    </widget>
    <zorder>ok</zorder>
    <zorder>img_label</zorder>
